`.datepicker-months` and `.datepicker-years` need to have full width to avoid looking squished

--- a/extensions/datepicker.less
+++ b/extensions/datepicker.less
@@ -183,3 +183,12 @@
 .datepicker.dropdown-menu {
 	z-index: @zIndexAboveModal;
 }
+
+// Custom additions
+.datepicker {
+	&-months, &-years {
+		table {
+			width: 100%;
+		}
+	}
+}
